Add implementation of algorithms

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-ml.script=ml/test.exe
+ml.script=ml/test.py
+ml.model.prefix=ml/model
+python.path=C:\\Users\\dimaj\\Desktop\\pythonProject2\\venv\\Scripts\\python
